@@ -19,6 +19,8 @@ hw-detect (1.65) UNRELEASED; urgency=low
     has been brought up. So up and down every interface so missing firmware
     can be detected. Closes: #491712
   * check-missing-firmware: Don't display dups. Closes: #492246
+  * check-missing-firmware: Check that debs are the right architecture before
+    trying to use them. Closes: #492249
 
  -- Frans Pop <fjp@debian.org>  Wed, 23 Jul 2008 19:54:37 +0200
 
